@@ -1,8 +1,8 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/clib/stddef.h,v $
- * $Date: 2001/01/29 15:10:19 $
- * $Revision: 1.2 $
+ * $Date: 2001/09/14 14:01:17 $
+ * $Revision: 1.2.2.1 $
  * $State: Exp $
  * $Author: admin $
  *
@@ -14,12 +14,19 @@
      && ! defined __need_ptrdiff_t && ! defined __need_NULL \
      && ! defined __need_wint_t)
 #define __STDDEF_H
+
+#define __need_wchar_t
+#define __need_size_t
+#define __need_ptrdiff_t
+#define __need_NULL
+#define __need_wint_t
 #endif
 
 
 /* Signed type of difference of two pointers.  */
-#if !defined __ptrdiff_t_defined && (defined __STDDEF_H || defined __need_ptrdiff_t)
+#if !defined __ptrdiff_t_defined && defined __need_ptrdiff_t
 #define __ptrdiff_t_defined
+
 #ifndef __PTRDIFF_TYPE__
 #define __PTRDIFF_TYPE__ int
 #endif
@@ -28,7 +35,7 @@ typedef __PTRDIFF_TYPE__ ptrdiff_t;
 #undef __need_ptrdiff_t
 
 /* Unsigned type of sizeof something.  */
-#if !defined __size_t_defined && (defined __STDDEF_H || defined __need_size_t)
+#if !defined __size_t_defined && defined __need_size_t
 #define __size_t_defined
 
 #ifndef __size_t
@@ -47,7 +54,7 @@ typedef __SIZE_TYPE__ size_t;
 #undef __need_size_t
 
 /* Wide character type.  */
-#if !defined __wchar_t_defined && (defined __STDDEF_H || defined __need_wchar_t)
+#if !defined __wchar_t_defined && defined __need_wchar_t
 #define __wchar_t_defined
 
 #ifndef __WCHAR_TYPE__
@@ -61,7 +68,7 @@ typedef __WCHAR_TYPE__ wchar_t;
 #endif
 #undef __need_wchar_t
 
-#if !defined __wint_t_defined && (defined __STDDEF_H || defined __need_wint_t)
+#if !defined __wint_t_defined && defined __need_wint_t
 #define __wint_t_defined
 #ifndef __WINT_TYPE__
 #define __WINT_TYPE__ unsigned int
@@ -71,8 +78,9 @@ typedef __WINT_TYPE__ wint_t;
 #undef __need_wint_t
 
 /* Define NULL.  */
-#if !defined __NULL_defined && (defined __STDDEF_H || defined __need_NULL)
+#if !defined __NULL_defined && defined __need_NULL
 #define __NULL_defined
+
 #ifndef NULL
 #define NULL (0)
 #endif
@@ -87,4 +95,11 @@ typedef void *ptr_t;
 #define offsetof(type, member) ((size_t) &((type *)0)->member)
 
 #endif /* __STDDEF_H */
+
+#else
+#undef __need_wchar_t
+#undef __need_size_t
+#undef __need_ptrdiff_t
+#undef __need_NULL
+#undef __need_wint_t
 #endif /* ! __STDDEF_H */
